--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -3,26 +3,46 @@
   <head>
     <meta charset="UTF-8" />
     <title>FriendFinder</title>
+
+    <!-- Latest compiled and minified CSS & JS -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+    />
     <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+    <!-- Font Awesome Glyphicons -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css"
+    />
+
+    <!-- Chosen -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
   </head>
 
-  <body id="body">
+  <body>
     <div class="container">
-      <h1>Survey</h1>
+      <h2>Survey Questions</h2>
       <hr />
 
-      <h2>About You</h2>
-      <h4>Name</h4>
+      <h3><strong>About You</strong></h3>
+      <h4>Name (Required)</h4>
       <input type="text" id="name" class="form-control" required />
 
-      <h4>Link to Photo Image</h4>
+      <h4>Link to Photo Image (Required)</h4>
       <input type="text" id="photo" class="form-control" required />
 
       <hr />
 
-      <h3>Question 1</h3>
-      <h4>You love to travel</h4>
-      <select class="chosen-select" id="questionOne">
+      <h3><strong>Question 1</strong></h3>
+      <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+      <select class="chosen-select" id="q1">
         <option value=""></option>
         <option value="1">1 (Strongly Disagree)</option>
         <option value="2">2</option>
@@ -31,11 +51,12 @@
         <option value="5">5 (Strongly Agree)</option>
       </select>
 
-      <h3>Question 2</h3>
+      <h3><strong>Question 2</strong></h3>
       <h4>
-        You are scared to try new things
+        Generally speaking, you rely more on your experience than your
+        imagination.
       </h4>
-      <select class="chosen-select" id="questionTwo">
+      <select class="chosen-select" id="q2">
         <option value=""></option>
         <option value="1">1 (Strongly Disagree)</option>
         <option value="2">2</option>
@@ -44,13 +65,12 @@
         <option value="5">5 (Strongly Agree)</option>
       </select>
 
-      <h3>
-        <strong>Question 3</strong>
-      </h3>
+      <h3><strong>Question 3</strong></h3>
       <h4>
-        It is easy for you to talk to new people
+        You find it easy to stay relaxed and focused even when there is some
+        pressure.
       </h4>
-      <select class="chosen-select" id="questionThree">
+      <select class="chosen-select" id="q3">
         <option value=""></option>
         <option value="1">1 (Strongly Disagree)</option>
         <option value="2">2</option>
@@ -59,9 +79,9 @@
         <option value="5">5 (Strongly Agree)</option>
       </select>
 
-      <h3>Question 4</h3>
-      <h4>You often find yourself thinking about the past</h4>
-      <select class="chosen-select" id="questionFour">
+      <h3><strong>Question 4</strong></h3>
+      <h4>You rarely do something just out of sheer curiosity.</h4>
+      <select class="chosen-select" id="q4">
         <option value=""></option>
         <option value="1">1 (Strongly Disagree)</option>
         <option value="2">2</option>
@@ -70,9 +90,9 @@
         <option value="5">5 (Strongly Agree)</option>
       </select>
 
-      <h3>Question 5</h3>
-      <h4>You find it hard to concentrate when your surroundings are messy</h4>
-      <select class="chosen-select" id="questionFive">
+      <h3><strong>Question 5</strong></h3>
+      <h4>People can rarely upset you.</h4>
+      <select class="chosen-select" id="q5">
         <option value=""></option>
         <option value="1">1 (Strongly Disagree)</option>
         <option value="2">2</option>
@@ -81,11 +101,11 @@
         <option value="5">5 (Strongly Agree)</option>
       </select>
 
-      <h3>Question 6</h3>
+      <h3><strong>Question 6</strong></h3>
       <h4>
-        You prefer the great outdoors over big cities
+        It is often difficult for you to relate to other people’s feelings.
       </h4>
-      <select class="chosen-select" id="questionSix">
+      <select class="chosen-select" id="q6">
         <option value=""></option>
         <option value="1">1 (Strongly Disagree)</option>
         <option value="2">2</option>
@@ -94,12 +114,12 @@
         <option value="5">5 (Strongly Agree)</option>
       </select>
 
-      <h3>Question 7</h3>
+      <h3><strong>Question 7</strong></h3>
       <h4>
-        You would prefer one long conversation daily over multiple short
-        conversations through out the day
+        In a discussion, truth should be more important than people’s
+        sensitivities.
       </h4>
-      <select class="chosen-select" id="questionSeven">
+      <select class="chosen-select" id="q7">
         <option value=""></option>
         <option value="1">1 (Strongly Disagree)</option>
         <option value="2">2</option>
@@ -108,9 +128,9 @@
         <option value="5">5 (Strongly Agree)</option>
       </select>
 
-      <h3>Question 8</h3>
-      <h4>It is hard for you to focus on one thing for long periods of time</h4>
-      <select class="chosen-select" id="questionEight">
+      <h3><strong>Question 8</strong></h3>
+      <h4>You rarely get carried away by fantasies and ideas.</h4>
+      <select class="chosen-select" id="q8">
         <option value=""></option>
         <option value="1">1 (Strongly Disagree)</option>
         <option value="2">2</option>
@@ -119,11 +139,12 @@
         <option value="5">5 (Strongly Agree)</option>
       </select>
 
-      <h3>Question 9</h3>
+      <h3><strong>Question 9</strong></h3>
       <h4>
-        You prefer being surrounded by people over spending time alone
+        You think that everyone’s views should be respected regardless of
+        whether they are supported by facts or not.
       </h4>
-      <select class="chosen-select" id="questionNine">
+      <select class="chosen-select" id="q9">
         <option value=""></option>
         <option value="1">1 (Strongly Disagree)</option>
         <option value="2">2</option>
@@ -132,11 +153,11 @@
         <option value="5">5 (Strongly Agree)</option>
       </select>
 
-      <h3>Question 10</h3>
+      <h3><strong>Question 10</strong></h3>
       <h4>
-        Other people's moods easily impact your own mood.
+        You feel more energetic after spending time with a group of people.
       </h4>
-      <select class="chosen-select" id="questionTen">
+      <select class="chosen-select" id="q10">
         <option value=""></option>
         <option value="1">1 (Strongly Disagree)</option>
         <option value="2">2</option>
@@ -145,47 +166,132 @@
         <option value="5">5 (Strongly Agree)</option>
       </select>
 
+      <br />
+      <br />
+
+      <!-- Submit Button -->
       <button
         type="submit"
         class="btn btn-primary btn-lg btn-block"
         id="submit"
-      ></button>
+      >
+        <i class="fa fa-check-circle" aria-hidden="true"></i> Submit
+      </button>
+
+      <hr />
+      <footer class="footer">
+        <div class="container">
+          <p>
+            <a href="/api/friends">API Friends List</a> |
+            <a href="https://github.com/afhaque/friendfinder">GitHub Repo</a>
+          </p>
+        </div>
+      </footer>
     </div>
+
+    <!-- Modal -->
+    <div id="results-modal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">
+              &times;
+            </button>
+            <h2 class="modal-title"><strong>Best Match</strong></h2>
+          </div>
+          <div class="modal-body">
+            <h2 id="match-name"></h2>
+            <img
+              id="match-img"
+              src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/6/005/064/1bd/3435aa3.jpg"
+              alt=""
+            />
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script type="text/javascript">
+      // Chosen CSS
+      var config = {
+        ".chosen-select": {},
+        ".chosen-select-deselect": {
+          allow_single_deselect: true
+        },
+        ".chosen-select-no-single": {
+          disable_search_threshold: 10
+        },
+        ".chosen-select-no-results": {
+          no_results_text: "Oops, nothing found!"
+        },
+        ".chosen-select-width": {
+          width: "95%"
+        }
+      };
+
+      for (var selector in config) {
+        $(selector).chosen(config[selector]);
+      }
+
+      // Capture the form inputs
       $("#submit").on("click", function(event) {
         event.preventDefault();
-        var name = $("#name")
-          .val()
-          .trim();
-        var photo = $("#photo").val();
-        var questionOne = parseInt($("#questionOne").val());
-        var questionTwo = parseInt($("#questionTwo").val());
-        var questionThree = parseInt($("#questionThree").val());
-        var questionFour = parseInt($("#questionFour").val());
-        var questionFive = parseInt($("#questionFive").val());
-        var questionSix = parseInt($("#questionSix").val());
-        var questionSeven = parseInt($("#questionSeven").val());
-        var questionEight = parseInt($("#questionEight").val());
-        var questionNine = parseInt($("#questionNine").val());
-        var questionTen = parseInt($("#questionTen").val());
-        var surveyResults = {
-          name: name,
-          photo: photo,
-          scores: [
-            questionOne,
-            questionTwo,
-            questionThree,
-            questionFour,
-            questionFive,
-            questionSix,
-            questionSeven,
-            questionEight,
-            questionNine,
-            questionTen
-          ]
-        };
-        console.log(surveyResults);
-        return surveyResults;
+
+        // Form validation
+        function validateForm() {
+          var isValid = true;
+          $(".form-control").each(function() {
+            if ($(this).val() === "") {
+              isValid = false;
+            }
+          });
+
+          $(".chosen-select").each(function() {
+            if ($(this).val() === "") {
+              isValid = false;
+            }
+          });
+          return isValid;
+        }
+
+        // If all required fields are filled
+        if (validateForm()) {
+          // Create an object for the user"s data
+          var userData = {
+            name: $("#name").val(),
+            photo: $("#photo").val(),
+            scores: [
+              $("#q1").val(),
+              $("#q2").val(),
+              $("#q3").val(),
+              $("#q4").val(),
+              $("#q5").val(),
+              $("#q6").val(),
+              $("#q7").val(),
+              $("#q8").val(),
+              $("#q9").val(),
+              $("#q10").val()
+            ]
+          };
+
+          // AJAX post the data to the friends API.
+          $.post("/api/friends", userData, function(data) {
+            // Grab the result from the AJAX post so that the best match's name and photo are displayed.
+            $("#match-name").text(data.name);
+            $("#match-img").attr("src", data.photo);
+
+            // Show the modal with the best match
+            $("#results-modal").modal("toggle");
+          });
+        } else {
+          alert("Please fill out all fields before submitting!");
+        }
       });
     </script>
   </body>
